[Fix] Fixed logo alignement

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -624,8 +624,8 @@ a {
   color:#C34C4F;
 }
 .header {
-  margin:20px;
   font-weight:500;
+  margin-bottom:20px;
 }
 .container {
   margin:40px 20px 0px 40px;
